<resources>
    <string name="app_name">Mobile_11_CRUD_01</string>
    <string name="Team">Times</string>
    <string name="Player">Jogadores</string>
    <string name="Register">Cadastrar</string>
    <string name="Delete">Excluir</string>
    <string name="Update">Modificar</string>
    <string name="Search">Procurar</string>
    <string name="List">Listar</string>
    <string name="IName">Nome</string>
    <string name="ICity">Cidade</string>
    <string name="INumber">Número</string>
    <string name="IDate">Data de Nascimento</string>
    <string name="IHeight">Altura</string>
    <string name="IWeight">Peso</string>
</resources>