<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamFragment">

    <EditText
        android:id="@+id/etIdT"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/INumber"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etNameT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNameT"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/IName"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etCityT"
        app:layout_constraintStart_toStartOf="@+id/etIdT"
        app:layout_constraintTop_toBottomOf="@+id/etIdT" />

    <EditText
        android:id="@+id/etCityT"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="71dp"
        android:ems="10"
        android:hint="@string/ICity"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/btRegisterT"
        app:layout_constraintStart_toStartOf="@+id/etNameT"
        app:layout_constraintTop_toBottomOf="@+id/etNameT" />

    <Button
        android:id="@+id/btRegisterT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="342dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResT"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCityT"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btUpdateT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="42dp"
        android:text="@string/Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResT"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegisterT"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/btSearchT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResT"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btUpdateT"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btDeleteT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="60dp"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResT"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSearchT"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btListT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="62dp"
        android:text="@string/List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResT"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDeleteT"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvResT"
        android:layout_width="205dp"
        android:layout_height="323dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />
</androidx.constraintlayout.widget.ConstraintLayout>