<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerFragment">

    <EditText
        android:id="@+id/etHeightP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/IHeight"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/etWeightP"
        app:layout_constraintEnd_toStartOf="@+id/etWeightP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etWeightP" />

    <EditText
        android:id="@+id/etNameP"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/IName"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etDateP"
        app:layout_constraintStart_toStartOf="@+id/etNumberP"
        app:layout_constraintTop_toBottomOf="@+id/etNumberP" />

    <EditText
        android:id="@+id/etDateP"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/IDate"
        android:inputType="date"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etWeightP"
        app:layout_constraintStart_toStartOf="@+id/etNameP"
        app:layout_constraintTop_toBottomOf="@+id/etNameP" />

    <EditText
        android:id="@+id/etWeightP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/IWeight"
        android:inputType="numberDecimal"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/spTeamP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etHeightP"
        app:layout_constraintTop_toBottomOf="@+id/etDateP" />

    <Spinner
        android:id="@+id/spTeamP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="353dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWeightP" />

    <Button
        android:id="@+id/btRegisterP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="45dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTeamP"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btUpdateP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="46dp"
        android:text="@string/Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResP"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRegisterP"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btListP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="68dp"
        android:text="@string/List"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDeleteP"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btDeleteP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="64dp"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSearchP"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btSearchP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResP"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btUpdateP"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvResP"
        android:layout_width="203dp"
        android:layout_height="303dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <EditText
        android:id="@+id/etNumberP"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/INumber"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/etNameP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>